Fixed skinny cards, letter spacing and changed font size for tablets and mobiles.

--- a/style.css
+++ b/style.css
@@ -206,7 +206,6 @@ div.col-lg-2 {
 }
 
 .card {
-	height: 474px;
 	width: 300px;
 	background-size: contain;
 	margin-right: 10px!important;
@@ -234,6 +233,7 @@ div.col-lg-2 {
 	background-color: white;
 	margin-bottom: 0px!important;
 	text-align: center;
+	letter-spacing: 1px;
 }
 
 .card-img-overlay {
@@ -276,5 +276,9 @@ div.col-lg-2 {
 	.index-intro {
 		width: 100%;
 		margin-top: 25%;
+	}
+
+	.card-text {
+		font-size: 1.25em;
 	}
 }
